# CVEqualizationProject

./: CMakeLists.txt  README.md
include/: equalizations.hpp  methods.hpp  metrics.hpp  metricsList.hpp  params.hpp  utilities.hpp
src/: equalizations.cpp  main.cpp  metrics.cpp  utilities.cpp
